--- a/springwebapp/pom.xml
+++ b/springwebapp/pom.xml
@@ -8,7 +8,7 @@
     <version>2.3.1.RELEASE</version>
     <relativePath/>
   </parent>
-  <groupId>edu.slz.javalab.springwebapp</groupId>
+  <groupId>edu.slz.javalab</groupId>
   <artifactId>springwebapp</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>spring-webapp</name>
