--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,15 @@
   <version>1.0-SNAPSHOT</version>
   <name>java-lab</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <java.version>11</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
