Refactoring to multi-module Maven project. Closes #1

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,6 @@
   <modules>
     <module>jmx-client</module>
     <module>springwebapp</module>
+    <module>threading</module>
   </modules>
 </project>
